--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site settings
 title: My Portfolio
-email: your-email@domain.com
+email: info@extau.com
 description: > # this means to ignore newlines until "baseurl:"
   Jannik Richter, jannik811@gmail.com
-baseurl: "/jekyll-slender-template" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://extau.github.io" # the base hostname & protocol for your site
+twitter_username: sir_kapil_ch
+github_username:  extau
 
 # Build settings
 markdown: kramdown
